# bbtools

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  build.rs  package.py
lib/: swizzle.c
rust/: Cargo.toml
rust/src/: bbtools.rs  main.rs  sbtools.rs  titles.rs
rust/src/bbtools/: bin.rs  eff.rs  lmt.rs  obj.rs  ppd.rs  stg.rs  text.rs  xact.rs  xbe.rs  xbo.rs  xpr.rs
rust/src/sbtools/: bin.rs  dds.rs  lmt.rs  ppd.rs  text.rs  xact.rs  xbe.rs  xbo.rs  xpr.rs
rust/src/titles/: loc.rs  sb.rs
rust/src/titles/loc/: cockpit.rs  mech.rs  wep.rs
rust/src/titles/loc/bin_file_names/: TEXTURE.txt
src/: bbtools.rs  main.rs  sbcockpit.c  sbeffect.c  sbhitbox.c  sblsq.c  sbmodel.c  sbsound.c  sbterrain.c  sbtext.c  sbweapon.c  titles.rs
src/bbtools/: eff.rs  lmt.rs  lsq.rs  obj.rs  ppd.rs  stg.rs  text.rs  x86.rs  xbe.rs  xbo.rs  xpr.rs
src/titles/: loc.rs  sb.rs
src/titles/loc/: cockpit.rs  mech.rs  wep.rs
src/titles/loc/bin_file_names/: ATARI.txt  LSQ.txt  MODEL.txt  MOTION.txt  VTMODEL.txt
